# Rational-Analyzer

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/locale/: rationalAnalyzer_ru.qm  rationalAnalyzer_ru.ts  translator.qrc
app/qml/: AddProductItem.qml  DayItem.qml  ListProductItem.qml  SpinBox.qml  WidgetAddFood.qml  WidgetAddProduct.qml  WidgetCircularCalories.qml  WidgetStart.qml  addDayProduct.qml  main.qml  qml.qrc
app/resource/: createTable.sql  resource.qrc
app/src/: Backend.cpp  Backend.h  Database.cpp  Database.hpp  DatabaseInterface.cpp  DatabaseInterface.hpp  Product.hpp  main.cpp  tool.cpp  tool.hpp
